--- a/udtsharp.csproj
+++ b/udtsharp.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <AssemblyName>udtsharp</AssemblyName>
     <RootNamespace>udtperftest</RootNamespace>
     <StartupObject>UdtPerfTest.Program</StartupObject>
   </PropertyGroup>
