--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
-/obj/Debug/netcoreapp3.1/udtsharp.AssemblyInfo.cs
+/obj
+/.vs
