CI: add a step to run tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,9 @@ jobs:
     - name: Build
       run: |
         dotnet restore && dotnet build -c Release
+    - name: Run tests
+      run: |
+        dotnet test
     - name: Package and upload
       run: |
         git clone https://github.com/nblockchain/fsx
