Remove test deps on Release mode (for nuget publishing)

--- a/udtsharp.csproj
+++ b/udtsharp.csproj
@@ -5,7 +5,6 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AssemblyName>udtsharp</AssemblyName>
     <RootNamespace>udtperftest</RootNamespace>
-    <StartupObject>UdtPerfTest.Program</StartupObject>
     <PackageId>UdtSharp</PackageId>
     <Description>Managed (C#) port of udt from C++</Description>
     <PackageProjectUrl>https://github.com/PlasticSCM/UdtSharp</PackageProjectUrl>
@@ -16,20 +15,27 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <StartupObject>UdtPerfTest.Program</StartupObject>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
-  <ItemGroup>
+  <ItemGroup Condition="'$(Configuration)'=='Debug'">
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(Configuration)'=='Release'">
     <PackageReference Include="NuGet.Build.Packaging" Version="0.2.2">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+
+    <Compile Remove="tests\*.cs" />
+    <Compile Remove="samples\Program.cs" />
   </ItemGroup>
 
 </Project>
