--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,12 +8,13 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build
       run: |
-        dotnet restore && dotnet build -c Release
+        dotnet restore && dotnet build -c Debug
     - name: Run tests
       run: |
-        dotnet test
+        dotnet test -c Debug
     - name: Package and upload
       run: |
+        dotnet clean
         git clone https://github.com/nblockchain/fsx
         sudo apt install -y fsharp
         fsx/Tools/nugetPush.fsx 0.1 ${{secrets.NUGET_API_KEY}}
