Publish nuget package as .NETStandard 2.0, not .NETCore
HashSet<T> had to be replaced with Dictionary<TK,TV> because
the TryGetValue() methods are not available in .NETStandard2.0.

And FreeBSD must have been added in .NETCore API only... let's
not care about that OS yet now.

--- a/udtsharp.csproj
+++ b/udtsharp.csproj
@@ -1,8 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <PropertyGroup Condition="'$(Configuration)'=='Release'">
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetProfile>netstandard</TargetProfile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)'=='Debug'">
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <StartupObject>UdtPerfTest.Program</StartupObject>
+  </PropertyGroup>
+
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
     <AssemblyName>udtsharp</AssemblyName>
     <RootNamespace>udtperftest</RootNamespace>
     <PackageId>UdtSharp</PackageId>
@@ -15,7 +24,6 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <StartupObject>UdtPerfTest.Program</StartupObject>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
